# AeroDocAssistant

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  PROJECT_STRUCTURE.txt  QUICKSTART.md  README.md  docker-compose.yml  examples.py  init_db.py  package.json  postman_collection.json  quickstart.py  requirements.txt  run.bat  run.sh  test_api.py
backend/: KNOWLEDGE_GRAPH.md  NEO4J_SETUP.md  RAG_KNOWLEDGE_GRAPH_INTEGRATION.md  README.md  check_system.py  examples_rag_integration.py  requirements.txt  result.json
backend/src/: __init__.py  config.py  main.py  pyproject.toml
backend/src/database/: __init__.py  vector_db.py
backend/src/models/: __init__.py  schemas.py
backend/src/routers/: __init__.py  ask.py  documents.py  graph.py  search.py  upload.py  validate.py
backend/src/services/: __init__.py  document_service.py  embeddings_service.py  graph_service.py  rag_service.py  validation_service.py
backend/src/services/llm/: knowledge_graph.py  knowledge_graph_queries.py  main.py
backend/src/services/llm/prompts/: __init__.py  chunking_prompt.py  main_prompt.py
backend/src/utils/: __init__.py  document_parser.py  graph_builder.py
data/: SAMPLE_DOCUMENTS.md
dataset/: README.md
dataset/1_structured/: metadata.csv  relations.json
dataset/1_structured/gost/: 3324-2--2009.json  53541-2009.json  56182-2014.json  59006—2020.json  59007—2020.json  70159-2022.json  8399-1—2010.json
dataset/3_glossary/: abbreviations.csv  aviation_terms.json
frontend/: package-lock.json
frontend/src/: App.css  App.tsx  index.css
(+22 files in other folders)
