[project]
name = "aerodockassistanthackathon"
version = "0.1.0"
description = ""
authors = [
    {name = "KirAPavlov",email = "kirapavlov@mai.education"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "langchain (>=1.1.3,<2.0.0)",
    "yandexgpt-python (>=0.2.3,<0.3.0)",
    "langchain-text-splitters (>=1.0.0,<2.0.0)",
    "qdrant-client (>=1.16.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "neo4j (>=6.0.3,<7.0.0)",
    "fastapi (>=0.124.2,<0.125.0)"
]

[tool.poetry]
packages = [{include = "aerodockassistanthackathon", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"